--- a/public/css/tooplate-style.css
+++ b/public/css/tooplate-style.css
@@ -224,8 +224,12 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #home {
-  /* Background image is painted by .home-bg layer in HeroSection for edge-to-edge fill */
-  background: transparent;
+  background-color: #000000;
+  background-image: url('../images/homebg.jpeg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
   display: -webkit-box;
   display: -webkit-flex;
    display: -ms-flexbox;
@@ -234,11 +238,13 @@ a:hover, a:active, a:focus {
   -webkit-align-items: center;
   -ms-flex-align: center;
    align-items: center;
-  min-height: var(--app-height, 100dvh);
-  height: var(--app-height, 100dvh);
+  min-height: 100svh;
+  min-height: 100lvh;
+  min-height: var(--app-height, 100lvh);
+  height: var(--app-height, 100lvh);
   position: relative;
   text-align: left;
-  overflow: hidden;
+  overflow: visible;
 }
 
 
@@ -672,8 +678,8 @@ footer p {
 
 @media (max-width: 980px) {
   #home {
-    min-height: var(--app-height, 100dvh);
-    height: var(--app-height, 100dvh);
+    min-height: var(--app-height, 100lvh);
+    height: var(--app-height, 100lvh);
     background-attachment: scroll;
   }
 
@@ -690,8 +696,8 @@ footer p {
 
 @media (max-width: 768px) {
   #home {
-    min-height: var(--app-height, 100dvh);
-    height: var(--app-height, 100dvh);
+    min-height: var(--app-height, 100lvh);
+    height: var(--app-height, 100lvh);
     background-attachment: scroll;
   }
 }
@@ -708,8 +714,8 @@ footer p {
   }
 
   #home {
-    min-height: var(--app-height, 100dvh);
-    height: var(--app-height, 100dvh);
+    min-height: var(--app-height, 100lvh);
+    height: var(--app-height, 100lvh);
   }
 
   .contact-info {
@@ -720,8 +726,8 @@ footer p {
 
 @media (max-width: 320px) {
   #home {
-    min-height: var(--app-height, 100dvh);
-    height: var(--app-height, 100dvh);
+    min-height: var(--app-height, 100lvh);
+    height: var(--app-height, 100lvh);
   }
 }
 
